# enterprise-rag

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: architecture.md
notebooks/: 01_agentic_rag_hybrid_workflow.ipynb  README.md
tests/: conftest.py  test_smoke.py
