[project]
name = "ai-template-python"
version = "0.1.0"
description = "Production-ready Python template for AI, Machine Learning and Data Science projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

authors = [{ name = "Rajesh Kanna Vaidyanathan" }]

keywords = ["python", "ai", "machine-learning", "data-science", "llm", "genai"]

[dependency-groups]
dev = ["mypy>=2.1.0", "pre-commit>=4.6.0", "pytest>=9.1.1", "ruff>=0.15.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
