[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Production-grade Enterprise Agentic Hybrid RAG platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
]

authors = [{ name = "Rajesh Kanna Vaidyanathan" }]

keywords = ["python", "ai", "machine-learning", "data-science", "llm", "genai"]

[dependency-groups]
dev = ["mypy>=2.1.0", "pre-commit>=4.6.0", "pytest>=9.1.1", "ruff>=0.15.20"]
notebook = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
